<resources>
    <!-- XML STRINGS -->
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Quantity</string>
    <string name="numberValue">0</string>
    <string name="order">Order</string>
    <string name="summary">Order Summary</string>
    <string name="priceValue">Total: $0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">Toppings</string>
    <string name ="whippedCream">Whipped Cream</string>
    <string name ="chocolate">Chocolate</string>
    <string name="enterName">Enter Name</string>

    <!-- JAVA STRINGS -->>
    <string name="userName">Name: </string>
    <string name="quantityOrdered">Quantity: </string>
    <string name="total">Total: €</string>
    <string name="hasWhippedCream">Whipped Cream?: </string>
    <string name="hasChocolate">Chocolate?: </string>
    <string name="thankYou">Thank You!</string>
</resources>
